k8s/ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prisdom-ingress
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
  - host: gql.prisdom-staging.online
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: graphql-svc
            port:
              number: 3001
